<resources>
    <string name="app_name">Student Agenda</string>
    <string name="fab_add_student">Add student</string>
    <string name="til_name">Name</string>
    <string name="til_email">E-mail</string>
    <string name="til_phone">Phone</string>
    <string name="til_birthday">Birthday</string>
    <string name="b_save_student">Save</string>
    <string name="title_save_student">New Student</string>
    <string name="birthday_datepicker_title">Your birthday</string>
    <string name="all_fields_required">Please fill all fields</string>
    <string name="empty_agenda">There isn\'t any student here yet, make network!</string>
    <string name="student_deleted">Student deleted</string>
    <string name="search_title">Search</string>
    <string name="query_hint">Type to search</string>
    <string name="new_student_added">New student saved!</string>
    <string name="user_updated">Student updated</string>
</resources>